--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 &nbsp;&nbsp;&nbsp;<h1>DREAM BIG</h1>
          <ul>
            <li> <a href="event.html">Home</a></li>
-           <li><a href="About.html">About</a></li>
+           <li><a href="index.html">About</a></li>
            <li><a href="Speakers.html">Speakers</a></li>
            <li><a href="sponsers.html">Sponsers</a></li>
            
