--- a/sponsers.html
+++ b/sponsers.html
@@ -11,7 +11,7 @@
             <img src="C:\Users\femi6\OneDrive\Desktop\vsc\emojij.jpg" width="50px" height="50px">
             &nbsp;&nbsp;&nbsp;<h1>DREAM BIG</h1>
      <ul>
-       <li> <a href="event.html">Home</a></li>
+       <li> <a href="index.html">Home</a></li>
        <li><a href="About.html">About</a></li>
        <li><a href="Speakers.html">Speakers</a></li>
        <li><a href="sponsers.html">Sponsors</a></li>
