index.html modified

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div class="four">
   <p>🚀 Event held on 4th June 2025 in Pennsylvania, USA.Join the community for more informations!!!</p>
-  <img src="C:\Users\femi6\OneDrive\Desktop\github\dream 3.jpg" width="100%" height="800px">
+  <img src="C:\Users\femi6\OneDrive\Desktop\vsc\dream 3.jpg" width="100%" height="800px">
  </div>
 
 <div class="background">
