--- a/Speakers.html
+++ b/Speakers.html
@@ -34,7 +34,7 @@
         <div class="speaker">
             
             <div class="sp2">
-                <img src="C:\Users\femi6\OneDrive\Desktop\vsc\s1.jpg">
+                <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\s1.jpg">
                 <div class="detail1">
                     <h3>Mr.Jason hoosuf</h3>
                     <h5>Cybersecurity Specialist</h5>
@@ -43,7 +43,7 @@
 
 
              <div class="sp3">
-                <img src="C:\Users\femi6\OneDrive\Desktop\vsc\s3.jpg">
+                <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\s3.jpg">
                 <div class="detail2">
                     <h3>Mrs.Mariya Anderson</h3>
                     <h5>Software Architect</h5>
@@ -52,7 +52,7 @@
 
 
              <div class="sp4">
-                <img src="C:\Users\femi6\OneDrive\Desktop\vsc\s6.jpg">
+                <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\s6.jpg">
                 <div class="detail3">
                     <h3>Mr.Hattori</h3>
                     <h5>Cloud Computing Engineer</h5>
@@ -62,7 +62,7 @@
 
 
              <div class="sp5">
-                <img src="C:\Users\femi6\OneDrive\Desktop\vsc\s4.jpg">
+                <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\s4.jpg">
                 <div class="detail4">
                     <h3>Mrs.Alison</h3>
                     <h5>AR/VR Specialist</h5>
@@ -71,7 +71,7 @@
 
 
              <div class="sp6">
-                <img src="C:\Users\femi6\OneDrive\Desktop\vsc\s5.jpg">
+                <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\s5.jpg">
                 <div class="detail5">
                     <h3>Mrs.Hanna</h3>
                     <h5>Full-Stack Developer</h5>
@@ -81,7 +81,7 @@
 
 
              <div class="sp7">
-                <img src="C:\Users\femi6\OneDrive\Desktop\vsc\s7.jpg">
+                <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\s7.jpg">
                 <div class="detail6">
                     <h3>Mr.Jesuvah</h3>
                     <h5>Artificial Intelligence (AI) Engineer</h5>
