--- a/sponsers.html
+++ b/sponsers.html
@@ -35,15 +35,15 @@
                   <h6>Dream Big is honored to have the backing of such esteemed sponsors who share our values and aspirations.A heartfelt thank you to our sponsors for believing in our mission and helping us achieve our goals.We are deeply grateful to our sponsors for their generous support and commitment to our cause.</h6>
         </div>
         <div class="sponsor3">
-                  <img src="C:\Users\femi6\OneDrive\Desktop\vsc\pic1.jpg" width="300px" height="250px">
-                  <img src="C:\Users\femi6\OneDrive\Desktop\vsc\pic2.jpg" width="300px" height="250px">
-                  <img src="C:\Users\femi6\OneDrive\Desktop\vsc\pic6.jpg" width="300px" height="250px">
-                  <img src="C:\Users\femi6\OneDrive\Desktop\vsc\pic 5.png" width="300px" height="250px">
-                  <img src="C:\Users\femi6\OneDrive\Desktop\vsc\pic8.png" width="300px" height="250px">
-                  <img src="C:\Users\femi6\OneDrive\Desktop\vsc\pic7.jpg" width="300px" height="250px">
-                  <img src="C:\Users\femi6\OneDrive\Desktop\vsc\pic9.png"width="300px" height="250px">
-                  <img src="C:\Users\femi6\OneDrive\Desktop\vsc\pic4.jpg" width="300px" height="250px">
-                  <img src="C:\Users\femi6\OneDrive\Desktop\vsc\pic3.png"width="300px" height="250px">
+                  <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\pic1.jpg" width="300px" height="250px">
+                  <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\pic2.jpg" width="300px" height="250px">
+                  <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\pic6.jpg" width="300px" height="250px">
+                  <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\pic 5.png" width="300px" height="250px">
+                  <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\pic8.png" width="300px" height="250px">
+                  <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\pic7.jpg" width="300px" height="250px">
+                  <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\pic9.png"width="300px" height="250px">
+                  <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\pic4.jpg" width="300px" height="250px">
+                  <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\pic3.png"width="300px" height="250px">
         </div>
     </div>
     <div class="last5">
