--- a/About.html
+++ b/About.html
@@ -73,9 +73,9 @@
              <h5>Event Organizers:</h5>
             <h4>"Tech people are play crucial role in shaping our understanding of technology"</h4>
             <div class="eleven">
-                    <img src="C:\Users\femi6\Onedrive\Desktop\vsc\micro.avif" width="300px"height="300px">
-                    <img src="C:\Users\femi6\OneDrive\Desktop\vsc\yt.avif"  width="300px"height="300px">
-                    <img src="C:\Users\femi6\OneDrive\Desktop\vsc\uber.avif"  width="300px"height="300px">
+                    <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\micro.avif" width="300px"height="300px">
+                    <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\yt.avif"  width="300px"height="300px">
+                    <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\uber.avif"  width="300px"height="300px">
             </div>
             <div class="name">
                    <h3>MR.Kim yonk</h3>
