--- a/About.html
+++ b/About.html
@@ -3,12 +3,12 @@
     <head>
         <title>Dream Big-About</title>
         <link rel="stylesheet" href="event.css">
-        <link rel="icon" href="C:\Users\femi6\OneDrive\Desktop\vsc\emojij.jpg">
+        <link rel="icon" href="C:\Users\femi6\OneDrive\Desktop\github\secondone\emojij.jpg">
     </head>
     <body>
         <div class="navbar" >
             <div class="one">
-                <img src="C:\Users\femi6\OneDrive\Desktop\vsc\emojij.jpg" width="50px" height="50px">
+                <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\emojij.jpg" width="50px" height="50px">
                 &nbsp;&nbsp;&nbsp;<h1>DREAM BIG</h1>
          <ul>
            <li> <a href="index.html">Home</a></li>
@@ -25,7 +25,7 @@
             <p>🚀 Event held on 4th June 2025 in Pennsylvania, USA.Join the community for more informations!!!</p>
             </div>
         <div class="about1">
-             <img src="C:\Users\femi6\OneDrive\Desktop\vsc\emojij.jpg" width="90px" height="90px">
+             <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\emojij.jpg" width="90px" height="90px">
              <h2>DREAM BIG</h2>
              <h3>An industry-Student Connect</h3>
              <h5><b>Date:</b>4 th June 2025</h5>
