--- a/Speakers.html
+++ b/Speakers.html
@@ -3,13 +3,13 @@
     <head>
         <title>Dream Big-Speakers</title>
         <link rel="stylesheet" href="event.css">
-        <link rel="icon" href="C:\Users\femi6\OneDrive\Desktop\vsc\emojij.jpg">
+        <link rel="icon" href="C:\Users\femi6\OneDrive\Desktop\github\secondone\emojij.jpg">
     </head>
     
     <body>
         <div class="navbar" >
             <div class="one">
-                <img src="C:\Users\femi6\OneDrive\Desktop\vsc\emojij.jpg" width="50px" height="50px">
+                <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\emojij.jpg" width="50px" height="50px">
                 &nbsp;&nbsp;&nbsp;<h1>DREAM BIG</h1>
                 <ul>
                       <li> <a href="index.html">Home</a></li>
@@ -26,7 +26,7 @@
             <p>🚀 Event held on 4th June 2025 in Pennsylvania, USA.Join the community for more informations!!!</p>
         </div>
         <div class="sp1">
-            <img src="C:\Users\femi6\OneDrive\Desktop\vsc\emojij.jpg" width="90px" height="90px">
+            <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\emojij.jpg" width="90px" height="90px">
             <h2>DREAM BIG</h2>
             <h3>Speakers in our DreamBig</h3>
             <h6>The engaging sessions led by our speakers are what make this tech event truly transformative.Our event is enriched by the cutting-edge perspectives and expertise of our remarkable speakers.Our event is enriched by the cutting-edge perspectives and expertise of our remarkable speakers.We are honored to host speakers who are pioneers in their fields, ensuring the success of this tech event.</h6>
