--- a/sponsers.html
+++ b/sponsers.html
@@ -3,12 +3,12 @@
     <head>
         <link rel="stylesheet" href="event.css">
         <title>Dream Big-Sponsors</title>
-        <link rel="icon" href="C:\Users\femi6\OneDrive\Desktop\vsc\emojij.jpg">
+        <link rel="icon" href="C:\Users\femi6\OneDrive\Desktop\github\secondone\emojij.jpg">
     </head>
 <body>
     <div class="navbar" >
         <div class="one">
-            <img src="C:\Users\femi6\OneDrive\Desktop\vsc\emojij.jpg" width="50px" height="50px">
+            <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\emojij.jpg" width="50px" height="50px">
             &nbsp;&nbsp;&nbsp;<h1>DREAM BIG</h1>
      <ul>
        <li> <a href="index.html">Home</a></li>
@@ -26,7 +26,7 @@
         </div>
     <div class="sponsor">
         <div class="sponsor1">
-                    <img src="C:\Users\femi6\OneDrive\Desktop\vsc\emojij.jpg" width="90px" height="90px">
+                    <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\emojij.jpg" width="90px" height="90px">
                     <h2>DREAM BIG</h2>
         </div>
         <div class="sponsor2">
