this is femina first commit message

--- a/About.html
+++ b/About.html
@@ -3,12 +3,13 @@
     <head>
         <title>Dream Big-About</title>
         <link rel="stylesheet" href="event.css">
-        <link rel="icon" href="C:\Users\femi6\OneDrive\Desktop\github\secondone\emojij.jpg">
+        <link rel="icon" href="images/emojij.jpg">   
+        <!-- okay vaa .mm ok -->
     </head>
     <body>
         <div class="navbar" >
             <div class="one">
-                <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\emojij.jpg" width="50px" height="50px">
+                <img src="images/emojij.jpg" width="50px" height="50px">
                 &nbsp;&nbsp;&nbsp;<h1>DREAM BIG</h1>
          <ul>
            <li> <a href="index.html">Home</a></li>
@@ -25,7 +26,7 @@
             <p>🚀 Event held on 4th June 2025 in Pennsylvania, USA.Join the community for more informations!!!</p>
             </div>
         <div class="about1">
-             <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\emojij.jpg" width="90px" height="90px">
+             <img src="images/emojij.jpg" width="90px" height="90px">
              <h2>DREAM BIG</h2>
              <h3>An industry-Student Connect</h3>
              <h5><b>Date:</b>4 th June 2025</h5>
@@ -66,16 +67,16 @@
         </div>
     </div>
     <video controls autoplay muted loop id="image">
-        <source src="C:\Users\femi6\OneDrive\Desktop\vsc\video.mp4">
+        <source src="images/video.mp4">
     </video>
    
         <div class="about6">
              <h5>Event Organizers:</h5>
             <h4>"Tech people are play crucial role in shaping our understanding of technology"</h4>
             <div class="eleven">
-                    <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\micro.avif" width="300px"height="300px">
-                    <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\yt.avif"  width="300px"height="300px">
-                    <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\uber.avif"  width="300px"height="300px">
+                    <img src="images/micro.avif" width="300px"height="300px">
+                    <img src="images/yt.avif"  width="300px"height="300px">
+                    <img src="images/uber.avif"  width="300px"height="300px">
             </div>
             <div class="name">
                    <h3>MR.Kim yonk</h3>
