--- a/Speakers.html
+++ b/Speakers.html
@@ -3,13 +3,13 @@
     <head>
         <title>Dream Big-Speakers</title>
         <link rel="stylesheet" href="event.css">
-        <link rel="icon" href="C:\Users\femi6\OneDrive\Desktop\github\secondone\emojij.jpg">
+        <link rel="icon" href="images/emojij.jpg">
     </head>
     
     <body>
         <div class="navbar" >
             <div class="one">
-                <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\emojij.jpg" width="50px" height="50px">
+                <img src="images/emojij.jpg" width="50px" height="50px">
                 &nbsp;&nbsp;&nbsp;<h1>DREAM BIG</h1>
                 <ul>
                       <li> <a href="index.html">Home</a></li>
@@ -26,7 +26,7 @@
             <p>🚀 Event held on 4th June 2025 in Pennsylvania, USA.Join the community for more informations!!!</p>
         </div>
         <div class="sp1">
-            <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\emojij.jpg" width="90px" height="90px">
+            <img src="images/emojij.jpg" width="90px" height="90px">
             <h2>DREAM BIG</h2>
             <h3>Speakers in our DreamBig</h3>
             <h6>The engaging sessions led by our speakers are what make this tech event truly transformative.Our event is enriched by the cutting-edge perspectives and expertise of our remarkable speakers.Our event is enriched by the cutting-edge perspectives and expertise of our remarkable speakers.We are honored to host speakers who are pioneers in their fields, ensuring the success of this tech event.</h6>
@@ -34,7 +34,7 @@
         <div class="speaker">
             
             <div class="sp2">
-                <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\s1.jpg">
+                <img src="images/s1.jpg">
                 <div class="detail1">
                     <h3>Mr.Jason hoosuf</h3>
                     <h5>Cybersecurity Specialist</h5>
@@ -43,7 +43,7 @@
 
 
              <div class="sp3">
-                <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\s3.jpg">
+                <img src="images/s3.jpg">
                 <div class="detail2">
                     <h3>Mrs.Mariya Anderson</h3>
                     <h5>Software Architect</h5>
@@ -52,7 +52,7 @@
 
 
              <div class="sp4">
-                <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\s6.jpg">
+                <img src="images/s6.jpg">
                 <div class="detail3">
                     <h3>Mr.Hattori</h3>
                     <h5>Cloud Computing Engineer</h5>
@@ -62,7 +62,7 @@
 
 
              <div class="sp5">
-                <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\s4.jpg">
+                <img src="images/s4.jpg">
                 <div class="detail4">
                     <h3>Mrs.Alison</h3>
                     <h5>AR/VR Specialist</h5>
@@ -71,7 +71,7 @@
 
 
              <div class="sp6">
-                <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\s5.jpg">
+                <img src="images/s5.jpg">
                 <div class="detail5">
                     <h3>Mrs.Hanna</h3>
                     <h5>Full-Stack Developer</h5>
@@ -81,7 +81,7 @@
 
 
              <div class="sp7">
-                <img src="C:\Users\femi6\OneDrive\Desktop\github\secondone\s7.jpg">
+                <img src="images/s7.jpg">
                 <div class="detail6">
                     <h3>Mr.Jesuvah</h3>
                     <h5>Artificial Intelligence (AI) Engineer</h5>
