--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
         <title>DREAM BIG</title>
         <link rel="stylesheet" href="event.css">
         <link rel="icon" href="images/emojij.jpg">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+        
 </head>
 <body>
     
 
-<div class="navbar" id="mytopnavbar">
+<div class="navbar" >
  
     <div class="one">
         <img src="images/emojij.jpg" width="50px" height="50px">
@@ -25,16 +24,7 @@
     <i class="fa fa-bars"></i>
   </a></li>
   </ul>
-  <script>
-    function myFunction() {
-      var x = document.getElementById("mytopnavbar");
-      if (x.className === "navbar") {
-        x.className += " responsive";
-      } else {
-        x.className = "navbar";
-      }
-    }
-</script>
+  
  <div class="two"><button>Login</button></div>
  <div class="three"><button>Register</button></div>
 </div>
