--- a/index.html
+++ b/index.html
@@ -9,33 +9,34 @@
 </head>
 <body>
     
-
-<div class="navbar" >
- 
-    <div class="one">
+  <div class="one">
+    <img src="images/emojij.jpg" width="50px" height="50px">
+    &nbsp;&nbsp;&nbsp;<h1>DREAM BIG</h1>
+</div>
+    <nav>
+      <div class="one">
         <img src="images/emojij.jpg" width="50px" height="50px">
         &nbsp;&nbsp;&nbsp;<h1>DREAM BIG</h1>
- <ul>
-   <li> <a href="index.html">Home</a></li>
-   <li><a href="About.html">About</a></li>
-   <li><a href="Speakers.html">Speakers</a></li>
-   <li><a href="sponsers.html">Sponsers</a></li>
-   <li><a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a></li>
-  </ul>
+     </div>
+   
+      <ul>
+       <li><a href="index.html">Home</a></li>
+       <li><a href="About.html">About</a></li>
+       <li><a href="Speakers.html">Speakers</a></li>
+       <li><a href="sponsers.html">Sponsers</a> </li>
+   
+     </ul>
+  <div class="onetoone">
+            <div class="two">
+                      <button>Login</button>
+                 </div>
+          <div class="three">
+               <button>Register</button>
+          </div>
+    </div>
+  </nav>
   
- <div class="two"><button>Login</button></div>
- <div class="three"><button>Register</button></div>
-</div>
-
-</div>
-
-
-
-
-
-<div class="four">
+  <div class="four">
   <p>🚀 Event held on 4th June 2025 in Pennsylvania, USA.Join the community for more informations!!!</p>
   <img src="images/dream 3.jpg" width="100%" height="800px">
  </div>
@@ -120,7 +121,7 @@ The event will feature insightful sessions by industry leaders like Sri Charan a
                       </div>
               </div>
 </div>
-
+<hr>
 <div class="lasty">
       
        <div class="last1">
@@ -162,8 +163,8 @@ The event will feature insightful sessions by industry leaders like Sri Charan a
 
 
 <div class="last5">
-  <h3>&copy;DreamBig-All Rights Reserved.visite our college website for more informations</h3>
-  <h4>Our address-saint fransisco north street,pennysylvania,USA</h4>
+          <h3>&copy;DreamBig-All Rights Reserved.visite our college website for more informations.</h3>
+          <h4>Our address-saint fransisco north street,pennysylvania,USA.</h4>
 </div>
 </body>
 </html>
