All are modified

--- a/About.html
+++ b/About.html
@@ -95,7 +95,7 @@
             <div class="name2">
                   <h2>Vice chancellor</h2>
                   <h2>Directer</h2>
-                  <h2>Associate Director & Event co-ordinator</h2>
+                  <h2>Associate Director</h2>
             </div>
           </div>
           <center>
