--- a/Speakers.html
+++ b/Speakers.html
@@ -4,7 +4,7 @@
         <title>Dream Big-Speakers</title>
         <link rel="stylesheet" href="event.css">
         <link rel="icon" href="images/emojij.jpg">
-        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     
     <body>
