--- a/About.html
+++ b/About.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Dream Big-About</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="event.css">
         <link rel="icon" href="images/emojij.jpg">   
         
