--- a/sponsers.html
+++ b/sponsers.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="event.css">
         <title>Dream Big-Sponsors</title>
         <link rel="icon" href="images/emojij.jpg">
-        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 <body>
     
