--- a/Speakers.html
+++ b/Speakers.html
@@ -9,7 +9,7 @@
     
     <body>
        
-            <nav>
+            <nav class="navbar">
               <header>
                 <img src="images/emojij.jpg" width="50px" height="50px">
                 &nbsp;&nbsp;&nbsp;<h1>DREAM BIG</h1>
