--- a/About.html
+++ b/About.html
@@ -82,8 +82,8 @@
             <div class="name">
                 <ol>
                     <li>MR.Kim yonk</li>
-                   <li>Dr.Mariya williams</li>
-                   <li>Mr.yuvana shan jeishuv</li>
+                   <li>Dr.Mariya rio</li>
+                   <li>Mr.yuvana shan </li>
                 </ol>
             </div>
             <div class="name2">
